CSS changes: - more mobile adjustments - styling for new elements (promoted property bar, etc)
Markup changes:
- minor adjustments to profile page
- added markup for promoted property bar
- cleaned up links in footer

--- a/public/css/_iphone.scss
+++ b/public/css/_iphone.scss
@@ -59,6 +59,13 @@ header {
   left: 0;
   top: 0;
 }
+.main {
+  .content {
+    h1 {
+      word-wrap:break-word;
+    }
+  }
+}
 .gorilla {
   max-height:400px;
   .content {
