CSS changes: - many updates to mobile styles, particularly around the dashboard side - improvements to some form styles (will be rolling out across all non-modal forms eventually)
Markup changes:
- adjustments to the markup on the profile edit form to
- addition of a small script in the footer to toggle the admin nav on mobile

--- a/public/css/_568px.scss
+++ b/public/css/_568px.scss
@@ -51,3 +51,36 @@ header .user_actions:after {
     display:block;
   }
 }
+article.property {
+  > h1, > nav {
+    float:none;
+    width:100%;
+    text-align:left;
+  }
+  > nav {
+    ul {
+      text-align:left!important;
+      padding-left:0;
+      margin-bottom:1em;
+    }
+  }
+  ul.controls {
+    li {
+      width:30%;
+      a {
+        max-width:100%;
+        font-size:.8em;
+      }
+    }
+  }
+  .stats {
+    li {
+      font-size:1.5em!important;
+      span {
+        font-size:.3em!important;
+        line-height:1em!important;
+        padding-top:1em;
+      }
+    }
+  }
+}
