--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -352,12 +352,16 @@ header .home {
 header .home:hover {
   background-position: 0 -52px;
 }
-/* line 324, style.scss */
 header .main {
   height: 59px;
   position: relative;
   margin: 0 auto;
   width: 995px;
+  h1 {
+    strong {
+      font-weight:300!important;
+    }
+  }
 }
 header .user_actions {
   float: right;
@@ -1073,7 +1077,7 @@ ul#items {
       }
     }
   }
-  input[type="text"], textarea, input[type="email"], input[type="number"], label[for="accepts_texts"] span {
+  input[type="text"], textarea, input[type="email"], input[type="number"], label[for="accepts_texts"] span, fieldset {
     background:#efefef;
   }
 }
@@ -2116,5 +2120,40 @@ body.map {
       animation-name:hiliter;
       animation-duration:0.75s;
     }
+  }
+}
+.filter {
+  .ui-selectmenu-button[aria-labelledby^="ui"] {
+    background:#efefef;
+    font-weight:bold;
+  }
+}
+.widget {
+  .achievementsTable {
+    td {
+      position:relative;
+      &:first-child {
+        span.fa {
+          &:before {
+            position:absolute;
+            top:11px;
+            left:6px;
+            width:100%;
+            height:100%;
+            display:block;
+          }
+        }
+      }
+    }
+  }
+}
+a.planChange {
+  padding:5px;
+  background:$brown;
+  text-decoration:none!important;
+  transition:.1s;
+  &:hover {
+    background:darken($brown, 10%);
+    transition:.1s;
   }
 }
