CSS changes: - temporarily disabling styling for active filters

--- a/public/css/_iphone.scss
+++ b/public/css/_iphone.scss
@@ -178,9 +178,7 @@ footer {
           > li {
             width:100%;
             > ul {
-              li {
-
-              }
+              li {}
             }
           }
         }
