--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -2124,8 +2124,8 @@ body.map {
 }
 .filter {
   .ui-selectmenu-button[aria-labelledby^="ui"] {
-    background:#efefef;
-    font-weight:bold;
+    // background:#efefef;
+    // font-weight:bold;
   }
 }
 .widget {
