--- a/public/css/style.css
+++ b/public/css/style.css
@@ -498,27 +498,32 @@ header .user_actions .list_property {
   background: #5b964c;
   transition: .2s; }
 
-/* line 530, style.scss */
 .listing_details table.listing_ng {
-  background: #74b164;
+  background: #ddd;
   width: 100%;
   border: none;
   border-spacing: 1px; }
-
-/* line 535, style.scss */
-.listing_details table.listing_ng tr {
-  border: none;
-  border-spacing: 1px; }
-
-/* line 538, style.scss */
-.listing_details table.listing_ng tr td {
-  border: none;
-  background: white;
-  width: 25%; }
-
-/* line 543, style.scss */
-.listing_details table.listing_ng tr td.listing_ng_label {
-  font-weight: 700; }
+  .listing_details table.listing_ng tr {
+    border: none;
+    border-spacing: 1px; }
+    .listing_details table.listing_ng tr td {
+      border: none;
+      background: white;
+      vertical-align: top;
+      width: 25%; }
+      .listing_details table.listing_ng tr td .fa {
+        color: #4A4A4A;
+        font-weight: normal;
+        font-size: 1em;
+        width: 20px;
+        height: 20px;
+        z-index: 9999;
+        position: relative;
+        text-align: center;
+        line-height: 20px; }
+    .listing_details table.listing_ng tr td.listing_ng_label {
+      font-weight: 700;
+      background: #ececec; }
 
 .promoted, .promoted-small {
   background: url(../img/promoted_large.png);
@@ -1879,11 +1884,13 @@ footer {
     body.home footer {
       display: none; }
     body.home .filter_toggle {
-      display: none !important; }
+      display: none !important;
+      z-index: 9999 !important; }
 
   .avatar {
     width: 243px;
-    margin: 0; }
+    margin: 0;
+    z-index: 8999 !important; }
     .avatar img {
       display: none; }
     .avatar .avatar_actions {
@@ -1945,7 +1952,16 @@ footer {
   footer .main .content.full nav ul > li {
     width: 100%; }
   footer .social ul li.right, footer .help ul li.right {
-    float: none; } }
+    float: none; }
+
+  ul#items li {
+    margin: 0;
+    padding: 10px;
+    width: 45%; }
+    ul#items li img {
+      max-width: 100%; }
+    ul#items li:nth-child(4n+4) {
+      margin: 0; } }
 .admin_nav_toggle {
   display: none; }
 
@@ -2355,6 +2371,36 @@ body.map {
     width: 100%;
     height: 100%;
     display: block; }
+.widget .planStats {
+  background: #74B164;
+  color: white;
+  width: 100%;
+  display: block;
+  padding: 10px;
+  position: relative;
+  text-align: center;
+  border-radius: 8px;
+  font-size: 2em; }
+  .widget .planStats small {
+    position: relative;
+    top: -8px; }
+  .widget .planStats span.month {
+    background: #7A694B;
+    font-size: .35em;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    border-radius: 8px 8px 0 0;
+    left: 0;
+    padding: 2px 10px; }
+  .widget .planStats span.day {
+    position: relative;
+    top: 8px; }
+
+.plan td {
+  width: 50%;
+  font-size: 0.9em;
+  text-align: center; }
 
 a.planChange {
   padding: 5px;
