--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -570,27 +570,41 @@ header .user_actions .list_property {
   background: #5b964c;
   transition: .2s;
 }
-/* line 530, style.scss */
 .listing_details table.listing_ng {
-  background: #74b164;
+  // background: #74b164;
+  background:#ddd;
   width: 100%;
   border: none;
   border-spacing: 1px;
-}
-/* line 535, style.scss */
-.listing_details table.listing_ng tr {
-  border: none;
-  border-spacing: 1px;
-}
-/* line 538, style.scss */
-.listing_details table.listing_ng tr td {
-  border: none;
-  background: white;
-  width: 25%;
-}
-/* line 543, style.scss */
-.listing_details table.listing_ng tr td.listing_ng_label {
-  font-weight: 700;
+  tr {
+    border: none;
+    border-spacing: 1px;
+    td {
+      border: none;
+      background: white;
+      vertical-align: top;
+      width: 25%;
+      .fa {
+        color:$darkgray;
+        font-weight:normal;
+        font-size:1em;
+        width:20px;
+        height:20px;
+        z-index:9999;
+        position:relative;
+        text-align:center;
+        line-height:20px;
+      }
+    }
+    td.listing_ng_label {
+      font-weight: 700;
+      background:#ececec;
+    }
+  }
+  tr:nth-child(odd) {
+    td {
+    }
+  }
 }
 .promoted, .promoted-small {
   background: url(../img/promoted_large.png);
@@ -2124,6 +2138,7 @@ body.map {
 }
 .filter {
   .ui-selectmenu-button[aria-labelledby^="ui"] {
+    // restore these lines when we make the filter classes dynamic
     // background:#efefef;
     // font-weight:bold;
   }
@@ -2145,6 +2160,47 @@ body.map {
         }
       }
     }
+  }
+  .planDateMonth{
+    .planStats {
+      
+    }
+  }
+  .planStats {
+    background:$green;
+    color:white;
+    width:100%;
+    display:block;
+    padding:10px;
+    position:relative;
+    text-align:center;
+    border-radius:$button_radius;
+    font-size:2em;
+    small {
+      position:relative;
+      top:-8px;
+    }
+    span.month {
+      background:$brown;
+      font-size:.35em;
+      width:100%;
+      position:absolute;
+      top:0;
+      border-radius:$button_radius $button_radius 0 0;
+      left:0;
+      padding:2px 10px;
+    } 
+    span.day {
+      position:relative;
+      top:8px;
+    }
+  }
+}
+.plan {
+  td {
+    width:50%;
+    font-size:0.9em;
+    text-align: center;
   }
 }
 a.planChange {
