--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -2199,8 +2199,15 @@ body.map {
 .plan {
   td {
     width:50%;
-    font-size:0.9em;
+    font-size:0.8em;
     text-align: center;
+  }
+  .truncate {
+    display:inline-block;
+    width: 160px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 }
 a.planChange {
