--- a/public/css/form.scss
+++ b/public/css/form.scss
@@ -1,23 +1,33 @@
 @import url(http://fonts.googleapis.com/css?family=Khula:400,800);
 form {
-  border: none; }
-  form fieldset {
-    border: 1px solid silver; }
-    form fieldset legend {
+  border: none; 
+  fieldset {
+    border: 1px solid silver; 
+    background:white;
+    margin-bottom:1em;
+    legend {
       padding: .5em;
-      font-size: 1.5em;
+      font-size: 1em;
       font-weight: 800;
-      border: 1px solid silver; }
-  form label {
+      border: 1px solid silver; 
+    }
+  }
+  label {
     display: block;
     clear: both;
     margin-bottom: 1em;
-    font-weight: bold; }
-    form label:last-of-type {
-      margin-bottom: 0; }
-    form label :only-child {
+    font-weight: bold; 
+    &:last-of-type {
+      margin-bottom: 0; 
+    }
+    &:only-child {
       margin-bottom:1em!important;
     }
+    i.fa {
+      font-size:1.5em;
+    }
+  }
+}
     form label span {
       font-weight: normal; }
   form label.half {
@@ -27,7 +37,9 @@ form {
     form label.half input {
       max-width: 100%; }
   form .half.left {
-    float: left; }
+    float: left; 
+    clear:left;
+  }
   form .half.right {
     float: right; }
   form input[type="text"],
@@ -82,3 +94,15 @@ form {
 @media screen and (max-width: 1010px) {
   .admin_nav > ul {
     max-width: 100%; } }
+
+#modify_rental_form {
+  span.select2 {
+    margin-bottom:.5em;
+    display:block;
+  }
+  .select2-container--default .select2-selection--multiple {
+    background:#efefef;
+    // padding:.5em;
+    border-radius:0px;
+  }
+}
