--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -2220,3 +2220,129 @@ a.planChange {
     transition:.1s;
   }
 }
+.localeNew {
+  margin-top:0;
+  .content {
+    background:#ececec;
+    border:1px solid darken(#ececec, 30%);
+    padding:.1em;
+    position:relative;
+  }
+  h2 {
+    font-size:1em;
+    text-align: center;
+    text-transform: uppercase;
+    a { 
+      color:$green;
+      text-decoration: none;
+    }
+  }
+  #closeMe {
+    position:absolute;
+    top:0px;
+    right:10px;
+  }
+  .showButton {
+    height:22px;
+    color:$green;
+    transition:.1s;
+    // position:absolute;
+    &:hover {
+      cursor:pointer;
+      transition:.1s;
+      color:darken($green,10%);
+    }
+  }
+  .showMe {
+    position:relative;
+    transition:1s;
+    height:411px;
+    display:none;
+    .left, .right {
+      display:block;
+      // height:300px;
+      padding:1em;
+      h1, h2 {
+        color:$darkgray;
+        text-align: left;
+      }
+    }
+    .left {
+      width:50%;
+      float:left;
+      h1 {
+        font-size:3em;
+        letter-spacing:-1px;
+        padding:0;
+        float:left;
+        max-width:395px;
+        span {
+          float:right;
+          text-align: right;
+          vertical-align: middle;
+          display:inline-block;
+          font-size:.35em;
+          margin-top:22px;
+          position:relative;
+          right:0px;
+        }
+      }
+      img.flag {
+        float:right;
+        position:relative;
+        top:20px;
+      }
+      p {
+        clear:both;
+        font-size:.9em;
+      }
+      img.glmr {
+        width:100%;
+      }
+    }
+    .right {
+      width:50%;
+      float:right;
+      h2 {
+        text-transform: none;
+        font-size:1.3em;
+      }
+      h2.divider {
+        border-bottom:2px solid $darkgray;
+      }
+      ul {
+        width:100%;
+        list-style:disc;
+        margin-bottom:2em;
+        li {
+          float:left;
+          margin-bottom:.5em;
+          width:50%;
+          a {
+            color:$green;
+            text-decoration: none;
+            font-size:.9em;
+          }
+        }
+      }
+      table {
+        border-spacing:1px;
+        background:white;
+        width:100%;
+        td {
+          color:white;
+          background:$brown;
+        }
+      }
+    }
+    .fa-close {
+      color:$green;
+      &:hover {
+        cursor: pointer;
+      }
+    }
+  }
+}
+.localeNew.open {
+  margin-top:10px;
+}
