CSS: - many additions to improve responsive behavior of the landing pages
Markup:
- one addition to aid the responsive behavior
- shortened text on clear all button for filter to minimize that button breaking onto a second line

--- a/public/css/_772px.scss
+++ b/public/css/_772px.scss
@@ -186,15 +186,39 @@ body {
 }
 .localeNew {
   .showMe {
+    height:auto!important;
+    .left, .right {
+      float:none!important;
+      height:auto!important;
+      width:100%!important;
+    }
     .left {
 
     }
     .right {
+      vertical-align: top;
+      * {
+        vertical-align: top!important;
+      }
       ul {
         li { 
           float:none!important;
           width:100%!important;
-          // display:block;
+          // display:block;z
+        }
+      }
+      .linksHolder {
+        float:left;
+        width:47%;
+      }
+      .statsHolder {
+        h2 {
+          border-bottom: 2px solid #4A4A4A;
+        }
+        float:right;
+        width:47%;
+        table {
+          font-size:.9em;
         }
       }
     }
