--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1534,7 +1534,16 @@ footer {
     float: none; }
     .view_switcher .ui-selectmenu-button {
       float: none;
-      display: block; } }
+      display: block; }
+
+  .localeNew .showMe .left h1 {
+    max-width: 315px !important;
+    font-size: 2em !important; }
+    .localeNew .showMe .left h1 span {
+      margin-top: 15px !important;
+      font-size: .5em; }
+  .localeNew .showMe .left img.flag {
+    top: 10px !important; } }
 @media screen and (max-width: 900px) {
   .toaster {
     left: 50%;
@@ -1545,7 +1554,10 @@ footer {
 
   footer {
     position: relative;
-    height: auto; } }
+    height: auto; }
+
+  .localeNew .showMe .left h1 {
+    max-width: 300px !important; } }
 @media only screen and (max-width: 772px) {
   body {
     overflow-y: auto; }
@@ -1691,9 +1703,29 @@ footer {
     width: 100%;
     margin: 0; }
 
-  .localeNew .showMe .right ul li {
-    float: none !important;
-    width: 100% !important; } }
+  .localeNew .showMe {
+    height: auto !important; }
+    .localeNew .showMe .left, .localeNew .showMe .right {
+      float: none !important;
+      height: auto !important;
+      width: 100% !important; }
+    .localeNew .showMe .right {
+      vertical-align: top; }
+      .localeNew .showMe .right * {
+        vertical-align: top !important; }
+      .localeNew .showMe .right ul li {
+        float: none !important;
+        width: 100% !important; }
+      .localeNew .showMe .right .linksHolder {
+        float: left;
+        width: 47%; }
+      .localeNew .showMe .right .statsHolder {
+        float: right;
+        width: 47%; }
+        .localeNew .showMe .right .statsHolder h2 {
+          border-bottom: 2px solid #4A4A4A; }
+        .localeNew .showMe .right .statsHolder table {
+          font-size: .9em; } }
 @media only screen and (max-width: 576px) {
   #ui-id-7-button {
     display: none; }
@@ -1978,7 +2010,13 @@ footer {
     ul#items li img {
       max-width: 100%; }
     ul#items li:nth-child(4n+4) {
-      margin: 0; } }
+      margin: 0; }
+
+  .localeNew .statsHolder, .localeNew .linksHolder {
+    float: none !important;
+    width: 100% !important; }
+  .localeNew .showMe .left img.flag {
+    top: 0 !important; } }
 .admin_nav_toggle {
   display: none; }
 
