- Added a number ticker to run the stats from 0-current number - Added a slight offset color to indicate that a property has been promoted

--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -223,7 +223,7 @@ article.property {
       article.property .stats li:hover {
         background: #4A4A4A;
         cursor: default; }
-      article.property .stats li span {
+      article.property .stats li span.label {
         font-size: 0.25em;
         line-height: 30px;
         background: #333333;
