--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -2143,7 +2143,7 @@ body.map {
       animation-name:hiliter;
       animation-duration:0.75s;
     }
-    a.promote {
+    a.promote.yes {
       background:darken($green, 20%);
       // background:$brown;
     }
