--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2415,7 +2415,7 @@ body.map {
   display: inline-block;
   animation-name: hiliter;
   animation-duration: 0.75s; }
-.property .controls a.promote {
+.property .controls a.promote.yes {
   background: #47743b; }
 
 .widget .achievementsTable td {
